# happy-knack-bass

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
scripts/: build_macos.sh  build_ubuntu.sh  build_windows.bat  postbuild_macos.sh  postbuild_ubuntu.sh  postbuild_windows.bat
src/HappyKnackBass/: Chronometer.h  Editor.cpp  Effect.cpp  Effect.h  Parameters.cpp  Parameters.h  Plugin.cmake  Processor.cpp  Processor.h
src/HappyKnackBass/Effect/: ASR.cpp  ASR.h  Filter.cpp  Filter.h  Trigger.cpp  Trigger.h
src/HappyKnackBass/Parameters/: GenericParameterContainer.h  GenericParameterSubscription.h
src/HappyKnackBassPrototype/: knack.py
src/VintageKnackBass/: Editor.cpp  Editor.h  Effect.cpp  Effect.h  Parameters.cpp  Parameters.h  Plugin.cmake  Plugin.cpp  Processor.cpp  Processor.h
src/VintageKnackBass/Effect/: ASR.cpp  Filter.cpp  Filter.h  Trigger.cpp  Trigger.h
src/VintageKnackBass/Parameters/: GenericParameterContainer.h  GenericParameterSubscription.h
